src/test/ui/resolve/resolve-speculative-adjustment.stderr
error[E0425]: cannot find value `field` in this scope
  --> $DIR/resolve-speculative-adjustment.rs:27:13
   |
27 |             field;
   |             ^^^^^ not found in this scope

error[E0425]: cannot find function `method` in this scope
  --> $DIR/resolve-speculative-adjustment.rs:30:13
   |
30 |             method();
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `field` in this scope
  --> $DIR/resolve-speculative-adjustment.rs:35:9
   |
35 |         field;
   |         ^^^^^ did you mean `self.field`?

error[E0425]: cannot find function `method` in this scope
  --> $DIR/resolve-speculative-adjustment.rs:38:9
   |
38 |         method();
   |         ^^^^^^ did you mean `self.method(...)`?

error: aborting due to 4 previous errors

